Added cross-platform serial interface code

--- a/simple-gtk/src/Makefile.am
+++ b/simple-gtk/src/Makefile.am
@@ -1,6 +1,6 @@
 bin_PROGRAMS = template-gtk
 
-template_gtk_SOURCES = template_gtk.cpp Template.cpp
+template_gtk_SOURCES = template_gtk.cpp Template.cpp SerialInterface.cpp alphanum.cpp
 template_gtk_CXXFLAGS = $(DEPS_CFLAGS)
 template_gtk_LDADD = $(DEPS_LIBS)
 
