--- a/xmega/Makefile
+++ b/xmega/Makefile
@@ -40,6 +40,7 @@
 # user defined values
 
 # MCU name
+# XMEGA
 ## MCU = atxmega16a4
 ## MCU = atxmega32a4
 ## MCU = atxmega64a1
@@ -74,10 +75,56 @@
 ## MCU = atxmega64b3
 ## MCU = atxmega128b1
 ## MCU = atxmega128b3
+# ATMEGA
+## MCU = atmega88
+## MCU = atmega88p
+## MCU = atmega88pa
+## MCU = atmega164
+## MCU = atmega168
+## MCU = atmega168p
+## MCU = atmega169
+## MCU = atmega169p
+## MCU = atmega169pa
+## MCU = atmega324
+## MCU = atmega324pa
+## MCU = atmega325
+## MCU = atmega3250
+## MCU = atmega328p
+## MCU = atmega329
+## MCU = atmega3290
+## MCU = atmega64
+## MCU = atmega640
+## MCU = atmega644
+## MCU = atmega644p
+## MCU = atmega644pa
+## MCU = atmega645
+## MCU = atmega6450
+## MCU = atmega649
+## MCU = atmega649p
+## MCU = atmega6490
+## MCU = atmega128
+## MCU = atmega1280
+## MCU = atmega1281
+## MCU = atmega1284p
+## MCU = atmega2560
+## MCU = atmega2561
 MCU = atxmega128a3
 
 # Is this a bootloader?
 MAKE_BOOTLOADER=no
+
+# Select boot size (ATmega only)
+# Note: if boot size is too small, XBoot may not fit.
+# Generally, it should be left on largest
+# See part datasheet for specific values
+# Largest
+BOOTSZ=0
+# Large
+#BOOTSZ=1
+# Medium
+#BOOTSZ=2
+# Small
+#BOOTSZ=3
 
 # Only program boot section
 # (XMega only)
@@ -92,6 +139,15 @@ PROG_BOOT_ONLY=yes
 # CPU Frequency
 #F_CPU=2000000
 F_CPU=32000000
+#F_CPU=16000000
+
+# Configuration support
+-include config.mk
+
+# Is this an xmega?
+ifneq ($(findstring atxmega,$(MCU)),)
+  XMEGA=yes
+endif
 
 # Preprocessor defines
 DEFINES = -DF_CPU=$(F_CPU)L
@@ -161,15 +217,26 @@ COMMON_FLAGS += $(CDEFS) $(CINCS)
 COMMON_FLAGS += -O$(OPT)
 COMMON_FLAGS += -funsigned-char -funsigned-bitfields -fpack-struct -fshort-enums
 COMMON_FLAGS += -ffunction-sections -fdata-sections
+
+ifeq ($(MAKE_BOOTLOADER), yes)
+# Good idea for devices with large flash memory
+COMMON_FLAGS += -fno-jump-tables
+endif
+
 COMMON_FLAGS += -Wall
 COMMON_FLAGS += -Wa,-adhlns=$(basename $<).lst
 COMMON_FLAGS += $(patsubst %,-I%,$(EXTRAINCDIRS))
+#COMMON_FLAGS += ...
 
+# C Specific flags
 CFLAGS = $(COMMON_FLAGS)
 CFLAGS += -Wstrict-prototypes
 CFLAGS += $(CSTANDARD)
+#CFLAGS += ...
 
+# C++ Specific flags
 CXXFLAGS = $(COMMON_FLAGS)
+#CXXFLAGS += ...
 
 
 
@@ -226,7 +293,7 @@ LDFLAGS += $(EXTMEMOPTS)
 LDFLAGS += $(PRINTF_LIB) $(SCANF_LIB) $(MATH_LIB)
 
 # Programming support using avrdude. Settings and variables.
-
+ifeq ($(OVERRIDE_AVRDUDE_PROGRAMMER),)
 # Programming hardware: alf avr910 avrisp bascom bsd
 # dt006 pavr picoweb pony-stk200 sp12 stk200 stk500
 #
@@ -234,6 +301,8 @@ LDFLAGS += $(PRINTF_LIB) $(SCANF_LIB) $(MATH_LIB)
 # to get a full listing.
 #
 #AVRDUDE_PROGRAMMER = jtag2pdi
+#AVRDUDE_PROGRAMMER = jtag2isp
+#AVRDUDE_PROGRAMMER = avrispmkii
 AVRDUDE_PROGRAMMER = avr109
 
 # Port
@@ -245,11 +314,11 @@ AVRDUDE_PORT = /dev/ttyUSB0
 
 # BAUD Rate
 AVRDUDE_BAUD = 115200
+endif
 
 # Sections to write
 AVRDUDE_WRITE_FLASH = -U flash:w:$(TARGET).hex
 #AVRDUDE_WRITE_EEPROM = -U eeprom:w:$(TARGET).eep
-
 
 # Uncomment the following if you want avrdude's erase cycle counter.
 # Note that this counter needs to be initialized first using -Yn,
@@ -277,8 +346,14 @@ AVRDUDE_WRITE_FLASH = -U flash:w:$(TARGET).hex
 #AVRDUDE_CHIP_ERASE = -D
 
 # Fuses and Lock Bits
-# See XMega A series datasheet (Atmel doc8077) section 4.16
+
+ifeq ($(OVERRIDE_AVRDUDE_FUSES),)
+ifeq ($(XMEGA), yes)
+
+# XMEGA
 AVRDUDE_FUSES =
+
+# See XMega A series datasheet (Atmel doc8077) section 4.16
 
 # Resest Configuration (for fuse byte 2)
 # If a custom configuration is needed, please
@@ -308,7 +383,7 @@ endif
 # See datasheet section 4.16.3 for more information
 # If a custom configuration is needed, please
 # override it here
-#AVRDUDE_FUSES += $(AVRDUDE_FUSES_RESET_CONFIG)
+AVRDUDE_FUSES += $(AVRDUDE_FUSES_RESET_CONFIG)
 
 # There is no fuse byte 3.....
 
@@ -338,6 +413,89 @@ endif
 ##AVRDUDE_USERSIG = -U usersig:w:filename
 #AVRDUDE_USERSIG = -U usersig:w:...:m
 
+else # xmega
+
+# ATMEGA
+AVRDUDE_FUSES =
+
+# Fuses for ATmega devices
+MCU_S = $(subst atmega,m,$(MCU))
+ifneq ($(filter $(MCU_S), m88 m88p m88pa m168 m168p),)
+  ifeq ($(BOOTSZ), 0)
+    BOOT_FUSE_NOBL	= -U efuse:w:0x01:m
+    BOOT_FUSE_BL	= -U efuse:w:0x00:m
+  endif
+  ifeq ($(BOOTSZ), 1)
+    BOOT_FUSE_NOBL	= -U efuse:w:0x03:m
+    BOOT_FUSE_BL	= -U efuse:w:0x02:m
+  endif
+  ifeq ($(BOOTSZ), 2)
+    BOOT_FUSE_NOBL	= -U efuse:w:0x05:m
+    BOOT_FUSE_BL	= -U efuse:w:0x04:m
+  endif
+  ifeq ($(BOOTSZ), 3)
+    BOOT_FUSE_NOBL	= -U efuse:w:0x07:m
+    BOOT_FUSE_BL	= -U efuse:w:0x06:m
+  endif
+endif
+ifneq ($(filter $(MCU_S), m328p),)
+  ifeq ($(BOOTSZ), 0)
+    BOOT_FUSE_NOBL	= -U hfuse:w:0xD9:m
+    BOOT_FUSE_BL	= -U hfuse:w:0xD8:m
+  endif
+  ifeq ($(BOOTSZ), 1)
+    BOOT_FUSE_NOBL	= -U hfuse:w:0xDB:m
+    BOOT_FUSE_BL	= -U hfuse:w:0xDA:m
+  endif
+  ifeq ($(BOOTSZ), 2)
+    BOOT_FUSE_NOBL	= -U hfuse:w:0xDD:m
+    BOOT_FUSE_BL	= -U hfuse:w:0xDC:m
+  endif
+  ifeq ($(BOOTSZ), 3)
+    BOOT_FUSE_NOBL	= -U hfuse:w:0xDF:m
+    BOOT_FUSE_BL	= -U hfuse:w:0xDE:m
+  endif
+endif
+ifneq ($(filter $(MCU_S), m164 m169 m169p m169pa m324 m324pa m325 m3250 m329 m3290 m64 m640 m644 m644p m644pa m645 m6450 m649 m649p m6490 m128 m1280 m1281 m1284p m2560 m2561),)
+  ifeq ($(BOOTSZ), 0)
+    BOOT_FUSE_NOBL	= -U hfuse:w:0x99:m
+    BOOT_FUSE_BL	= -U hfuse:w:0x98:m
+  endif
+  ifeq ($(BOOTSZ), 1)
+    BOOT_FUSE_NOBL	= -U hfuse:w:0x9B:m
+    BOOT_FUSE_BL	= -U hfuse:w:0x9A:m
+  endif
+  ifeq ($(BOOTSZ), 2)
+    BOOT_FUSE_NOBL	= -U hfuse:w:0x9D:m
+    BOOT_FUSE_BL	= -U hfuse:w:0x9C:m
+  endif
+  ifeq ($(BOOTSZ), 3)
+    BOOT_FUSE_NOBL	= -U hfuse:w:0x9F:m
+    BOOT_FUSE_BL	= -U hfuse:w:0x9E:m
+  endif
+endif
+
+ifeq ($(MAKE_BOOTLOADER), yes)
+# Boot config (Bootloader)
+AVRDUDE_FUSES_BOOT_CONFIG = $(BOOT_FUSE_BL)
+else
+# Boot config (Regular)
+AVRDUDE_FUSES_BOOT_CONFIG = $(BOOT_FUSE_NOBL)
+endif
+
+#AVRDUDE_FUSES += -U lfuse:w:0xFF:m
+#AVRDUDE_FUSES += -U hfuse:w:0xFF:m
+#AVRDUDE_FUSES += -U efuse:w:0xFF:m
+
+AVRDUDE_FUSES += $(AVRDUDE_FUSES_BOOT_CONFIG)
+
+endif # xmega
+endif # override fuses
+
+ifeq ($(AVRDUDE_FUSES),)
+  $(warning AVRDUDE will not change any fuses.  Please double check the fuse configuration to ensure proper startup.)
+endif
+
 AVRDUDE_FLAGS = -p $(MCU) -P $(AVRDUDE_PORT) -c $(AVRDUDE_PROGRAMMER)
 ifdef AVRDUDE_BAUD
   AVRDUDE_FLAGS += -b $(AVRDUDE_BAUD)
@@ -348,15 +506,19 @@ AVRDUDE_FLAGS += $(AVRDUDE_ERASE_COUNTER)
 AVRDUDE_FLAGS += $(AVRDUDE_CHIP_ERASE)
 
 ifeq ($(MAKE_BOOTLOADER), yes)
+ifeq ($(XMEGA), yes)
 ifeq ($(PROG_BOOT_ONLY), yes)
   BOOT_TARGET=$(TARGET)-boot.hex
   AVRDUDE_WRITE_FLASH = -U boot:w:$(TARGET)-boot.hex
+endif
 endif
 endif
 
 # ---------------------------------------------------------------------------
 
 # Processor definitions
+# Sizes in bytes, not works (datasheet generally in words)
+# xmega
 MCU_S = $(subst atxmega,x,$(MCU))
 ifneq ($(filter $(MCU_S), x16a4 x16d4 x16a4u),)
   BOOT_SECTION_START		=0x004000
@@ -376,11 +538,129 @@ endif
 ifneq ($(filter $(MCU_S), x256a1 x256a3 x256a3b x256d3 x256a3u x256a3bu),)
   BOOT_SECTION_START		=0x040000
 endif
+# atmega
+MCU_S = $(subst atmega,m,$(MCU))
+ifneq ($(filter $(MCU_S), m88 m88p m88pa),)
+  ifeq ($(BOOTSZ), 0)
+    BOOT_SECTION_START		=0x001800
+    BOOT_SECTION_SIZE		=0x000800
+  endif
+  ifeq ($(BOOTSZ), 1)
+    BOOT_SECTION_START		=0x001C00
+    BOOT_SECTION_SIZE		=0x000400
+  endif
+  ifeq ($(BOOTSZ), 2)
+    BOOT_SECTION_START		=0x001E00
+    BOOT_SECTION_SIZE		=0x000200
+  endif
+  ifeq ($(BOOTSZ), 3)
+    BOOT_SECTION_START		=0x001F00
+    BOOT_SECTION_SIZE		=0x000100
+  endif
+endif
+ifneq ($(filter $(MCU_S), m164 m168 m168p),)
+  ifeq ($(BOOTSZ), 0)
+    BOOT_SECTION_START		=0x003800
+    BOOT_SECTION_SIZE		=0x000800
+  endif
+  ifeq ($(BOOTSZ), 1)
+    BOOT_SECTION_START		=0x003C00
+    BOOT_SECTION_SIZE		=0x000400
+  endif
+  ifeq ($(BOOTSZ), 2)
+    BOOT_SECTION_START		=0x003E00
+    BOOT_SECTION_SIZE		=0x000200
+  endif
+  ifeq ($(BOOTSZ), 3)
+    BOOT_SECTION_START		=0x003F00
+    BOOT_SECTION_SIZE		=0x000100
+  endif
+endif
+ifneq ($(filter $(MCU_S), m324 m324pa m328p m325 m3250 m329 m3290),)
+  ifeq ($(BOOTSZ), 0)
+    BOOT_SECTION_START		=0x007000
+    BOOT_SECTION_SIZE		=0x001000
+  endif
+  ifeq ($(BOOTSZ), 1)
+    BOOT_SECTION_START		=0x007800
+    BOOT_SECTION_SIZE		=0x000800
+  endif
+  ifeq ($(BOOTSZ), 2)
+    BOOT_SECTION_START		=0x007C00
+    BOOT_SECTION_SIZE		=0x000400
+  endif
+  ifeq ($(BOOTSZ), 3)
+    BOOT_SECTION_START		=0x007E00
+    BOOT_SECTION_SIZE		=0x000200
+  endif
+endif
+ifneq ($(filter $(MCU_S), m64 m640 m644 m644p m644pa m645 m6450 m649 m649p m6490),)
+  ifeq ($(BOOTSZ), 0)
+    BOOT_SECTION_START		=0x00E000
+    BOOT_SECTION_SIZE		=0x002000
+  endif
+  ifeq ($(BOOTSZ), 1)
+    BOOT_SECTION_START		=0x00F000
+    BOOT_SECTION_SIZE		=0x001000
+  endif
+  ifeq ($(BOOTSZ), 2)
+    BOOT_SECTION_START		=0x00F800
+    BOOT_SECTION_SIZE		=0x000800
+  endif
+  ifeq ($(BOOTSZ), 3)
+    BOOT_SECTION_START		=0x00FC00
+    BOOT_SECTION_SIZE		=0x000400
+  endif
+endif
+ifneq ($(filter $(MCU_S), m128 m1280 m1281 m1284p),)
+  ifeq ($(BOOTSZ), 0)
+    BOOT_SECTION_START		=0x01E000
+    BOOT_SECTION_SIZE		=0x002000
+  endif
+  ifeq ($(BOOTSZ), 1)
+    BOOT_SECTION_START		=0x01F000
+    BOOT_SECTION_SIZE		=0x001000
+  endif
+  ifeq ($(BOOTSZ), 2)
+    BOOT_SECTION_START		=0x01F800
+    BOOT_SECTION_SIZE		=0x000800
+  endif
+  ifeq ($(BOOTSZ), 3)
+    BOOT_SECTION_START		=0x01FC00
+    BOOT_SECTION_SIZE		=0x000400
+  endif
+endif
+ifneq ($(filter $(MCU_S), m2560 m2561),)
+  ifeq ($(BOOTSZ), 0)
+    BOOT_SECTION_START		=0x03E000
+    BOOT_SECTION_SIZE		=0x002000
+  endif
+  ifeq ($(BOOTSZ), 1)
+    BOOT_SECTION_START		=0x03F000
+    BOOT_SECTION_SIZE		=0x001000
+  endif
+  ifeq ($(BOOTSZ), 2)
+    BOOT_SECTION_START		=0x03F800
+    BOOT_SECTION_SIZE		=0x000800
+  endif
+  ifeq ($(BOOTSZ), 3)
+    BOOT_SECTION_START		=0x03FC00
+    BOOT_SECTION_SIZE		=0x000400
+  endif
+endif
+
+ifeq ($(BOOT_SECTION_START),)
+  $(error $(MCU) not found in makefile, BOOT_SECTION_START not defined!)
+endif
 
 ifeq ($(MAKE_BOOTLOADER), yes)
 # BOOT_SECTION_START (=Start of Boot Loader section
 # in bytes - not words) as defined above.
 LDFLAGS += -Wl,--section-start=.text=$(BOOT_SECTION_START)
+endif
+
+ifneq ($(XMEGA), yes)
+DEFINES += -DBOOT_SECTION_SIZE=$(BOOT_SECTION_SIZE)
 endif
 
 # ---------------------------------------------------------------------------
@@ -439,6 +719,11 @@ MSG_ASSEMBLING = Assembling:
 MSG_CLEANING = Cleaning project:
 
 
+# Configuration support
+ifeq ($(USE_CONFIG_H), yes)
+  CONFIG_H = config.h
+  DEFINES += -DUSE_CONFIG_H
+endif
 
 
 # Define all object files.
@@ -474,6 +759,12 @@ lss: $(TARGET).lss
 sym: $(TARGET).sym
 
 
+# Configuration support
+%.conf %.conf.mk: force
+	cp $@ config.mk
+	$(MAKE)
+
+-include config.h.mk
 
 # Eye candy.
 # AVR Studio 3.x does not check make's exit code but relies on
@@ -569,7 +860,7 @@ extcoff: $(TARGET).elf
 # Link: create ELF output file from object files.
 .SECONDARY : $(TARGET).elf
 .PRECIOUS : $(OBJ)
-%.elf: $(OBJ)
+%.elf: $(CONFIG_H) $(OBJ)
 	@echo
 	@echo $(MSG_LINKING) $@
 	$(CC) $(ALL_CFLAGS) $(OBJ) --output $@ $(LDFLAGS)
@@ -626,6 +917,7 @@ clean_list :
 	$(REMOVE) $(TARGET).lss
 	$(REMOVE) $(OBJ)
 	$(REMOVE) $(LST)
+	$(REMOVE) config.mk config.h
 	$(REMOVE) $(addsuffix .s,$(basename $(SRC)))
 	$(REMOVE) $(addsuffix .d,$(basename $(SRC)))
 	$(REMOVE) .dep/*
@@ -639,5 +931,5 @@ clean_list :
 # Listing of phony targets.
 .PHONY : all begin finish end sizebefore sizeafter gccversion \
 build elf hex eep lss sym coff extcoff \
-clean clean_list program
+clean clean_list program force
 
