--- a/xmega/Makefile
+++ b/xmega/Makefile
@@ -162,7 +162,7 @@ TARGET = main
 
 # List C source files here. (C dependencies are automatically generated.)
 SRC = $(TARGET).cpp
-SRC += usart.cpp spi.cpp i2c.cpp eeprom.cpp
+SRC += usart.cpp spi.cpp i2c.cpp eeprom.cpp istream.cpp ostream.cpp iostream.cpp
 # SRC += ...
 
 # List Assembler source files here.
